<resources>
    <string name="app_name">Prueba2</string>
    <string name="ir_a_listaactivity">Ir a ListaActivity</string>
    <string name="prueba2" />
    <string name="gas">Gas</string>
    <string name="luz">Luz</string>
    <string name="agua">Agua</string>
    <string name="medidor_de">Medidor de:</string>
    <string name="fecha">Fecha:</string>
    <string name="n_mero_de_medidor">Número de Medidor:</string>
    <string name="registrar_medici_n">Registrar medición</string>
</resources>